--- a/mon-pix/app/components/campaign-participation-overview/card.hbs
+++ b/mon-pix/app/components/campaign-participation-overview/card.hbs
@@ -1,41 +1,9 @@
-<article class="campaign-participation-overview-card">
-  <header class="campaign-participation-overview-card__header">
-    <PixTag class="campaign-participation-overview-card-header__tag"
-            @compact={{true}}
-            @color={{this.cardInfo.tagColor}}>
-      {{t this.cardInfo.tagText}}
-    </PixTag>
-    <h3 class="campaign-participation-overview-card-header__title">{{@model.organizationName}}</h3>
-    <strong class="campaign-participation-overview-card-header__subtitle">{{@model.campaignTitle}}</strong>
-    <time class="campaign-participation-overview-card-header__date"
-          datetime="{{@model.date}}">
-      {{t this.cardInfo.dateText date=(format-date @model.date)}}
-    </time>
-  </header>
-  <section class="campaign-participation-overview-card-content">
-    {{#if (eq @model.status "finished") }}
-      <p class="campaign-participation-overview-card-content__content">
-        {{t 'pages.campaign-participation-overview.card.results' result=@model.masteryPercentage}}
-      </p>
-    {{else if this.cardInfo.hasMasteryPercentage }}
-      <p class="campaign-participation-overview-card-content__content campaign-participation-overview-card-content--archived-result">
-        {{t 'pages.campaign-participation-overview.card.results' result=@model.masteryPercentage}}
-      </p>
-    {{else if (eq @model.status "archived") }}
-      <p class="campaign-participation-overview-card-content__content campaign-participation-overview-card-content--archived">
-        {{t 'pages.campaign-participation-overview.card.text-archived' htmlSafe=true}}
-      </p>
-    {{/if}}
-
-    {{#if (not-eq @model.status "archived")}}
-      <LinkTo class="{{this.cardInfo.actionClass}} campaign-participation-overview-card-content__action"
-              @route="campaigns.start-or-resume"
-              @model={{@model.campaignCode}}>
-        {{#if (eq @model.status "finished")}}
-          <FaIcon @icon='arrow-right' aria-hidden="true"></FaIcon>
-        {{/if}}
-        {{t this.cardInfo.actionText}}
-      </LinkTo>
-    {{/if}}
-  </section>
-</article>
+{{#if (eq @model.status 'ONGOING')}}
+  <CampaignParticipationOverview::Card::Ongoing @model={{@model}}/>
+{{else if (eq @model.status 'TO_SHARE')}}
+  <CampaignParticipationOverview::Card::ToShare @model={{@model}}/>
+{{else if (eq @model.status 'ENDED')}}
+  <CampaignParticipationOverview::Card::Ended @model={{@model}}/>
+{{else if (eq @model.status 'ARCHIVED')}}
+  <CampaignParticipationOverview::Card::Archived @model={{@model}}/>
+{{/if}}
