--- a/orga/app/styles/app.scss
+++ b/orga/app/styles/app.scss
@@ -61,6 +61,7 @@
 @import "pages/authenticated/campaigns/details/participants/participant/header";
 @import "pages/authenticated/campaigns/details/participants/participant/results";
 @import "pages/authenticated/campaigns/profile";
+@import "pages/authenticated/certification";
 @import "pages/authenticated/team";
 @import "pages/authenticated/team/list";
 @import "pages/authenticated/team/new";
