fix: onClickOverlay now closes the modal properly

--- a/mon-pix/app/components/routes/campaigns/restricted/join-sco-information-modal.hbs
+++ b/mon-pix/app/components/routes/campaigns/restricted/join-sco-information-modal.hbs
@@ -1,4 +1,4 @@
-<PixModal @containerClass="join-error-modal">
+<PixModal @containerClass="join-error-modal" @onClickOverlay={{@closeModal}}>
   <div class="join-error-modal__header">
     <div class="join-error-modal-header__title">
       <h1 class="join-error-modal-header-title__text">{{t 'pages.join.sco.login-information-title'}}</h1>
