--- a/orga/app/components/sidebar-menu.hbs
+++ b/orga/app/components/sidebar-menu.hbs
@@ -5,12 +5,16 @@
     </span>
     {{t 'navigation.main.campaigns' }}
   </LinkTo>
-  <LinkTo @route="authenticated.certification" class="sidebar-menu__item sidebar--padding-left sidebar--padding-right">
-    <span class="sidebar--padding-right sidebar--item-icon">
-        <FaIcon @icon="award" />
-    </span>
-    {{t 'navigation.main.certification' }}
-  </LinkTo>
+  {{#if this.featureToggles.isCertificationResultsInOrgaEnabled}}
+    {{#if this.currentUser.isSCOManagingStudents}}
+      <LinkTo @route="authenticated.certification" class="sidebar-menu__item sidebar--padding-left sidebar--padding-right">
+        <span class="sidebar--padding-right sidebar--item-icon">
+            <FaIcon @icon="award" />
+        </span>
+        {{t 'navigation.main.certification' }}
+      </LinkTo>
+    {{/if}}
+  {{/if}}
   {{#if this.currentUser.isSCOManagingStudents}}
     <LinkTo @route="authenticated.sco-students" class="sidebar-menu__item sidebar--padding-left sidebar--padding-right">
       <span class="sidebar--padding-right sidebar--item-icon">
