feat(app): add eula & gdpr links to the footer

--- a/mon-pix/app/templates/components/footer.hbs
+++ b/mon-pix/app/templates/components/footer.hbs
@@ -25,6 +25,18 @@
            class="footer-navigation__item">
           {{t 'navigation.footer.a11y'}}
         </a>
+
+        <a href="{{t 'navigation.footer.link-eula'}}"
+           target="_blank"
+           class="footer-navigation__item">
+          {{t 'navigation.footer.eula'}}
+        </a>
+
+        <a href="{{t 'navigation.footer.link-protection-policy'}}"
+           target="_blank"
+           class="footer-navigation__item">
+          {{t 'navigation.footer.protection-policy'}}
+        </a>
       </div>
 
       <div class="footer-container-content__copyrights">
