--- a/orga/app/templates/authenticated/certifications.hbs
+++ b/orga/app/templates/authenticated/certifications.hbs
@@ -1,9 +1,9 @@
-<div class="certification-layout">
-  <div class="certification-page">
-    <div class="certification-page__header">
+<div class="certifications-layout">
+  <div class="certifications-page">
+    <div class="certifications-page__header">
       <h1 class="page__title page-title">{{t 'pages.certifications.title'}}</h1>
     </div>
-    <div class="certification-page__text">
+    <div class="certifications-page__text">
       {{t 'pages.certifications.description'}}
     </div>
   </div>
