--- a/orga/app/components/routes/authenticated/campaign/assessment/details.hbs
+++ b/orga/app/components/routes/authenticated/campaign/assessment/details.hbs
@@ -37,16 +37,14 @@
             </div>
           </li>
         {{/unless}}
-        <li class="panel-header-data__content">
-          <div class="label-text panel-header-data-content__label">{{t 'pages.campaign-individual-results.shared-date'}}</div>
-          {{#if @campaignAssessmentParticipation.sharedAt}}
-            <div class="value-text panel-header-data-content__value">
-              {{moment-format @campaignAssessmentParticipation.sharedAt 'DD MMM YYYY'}}
-            </div>
-          {{else}}
-            <div class="value-text panel-header-data-content__value">{{t 'pages.campaign-individual-results.not-shared'}}</div>
-          {{/if}}
-        </li>
+        {{#if @campaignAssessmentParticipation.isShared }}
+          <li class="panel-header-data__content">
+            <div class="label-text panel-header-data-content__label">{{t 'pages.campaign-individual-results.shared-date'}}</div>
+              <div class="value-text panel-header-data-content__value">
+                {{moment-format @campaignAssessmentParticipation.sharedAt 'DD MMM YYYY'}}
+              </div>
+          </li>
+        {{/if}}
       </ul>
 
       {{#if @campaignAssessmentParticipation.isShared}}
