[FEATURE] Add campaign banner for SCO Agri with a specific link (PIX-2219)

--- a/orga/app/components/information-banner.hbs
+++ b/orga/app/components/information-banner.hbs
@@ -15,7 +15,7 @@
   <PixBanner class="information-banner">
     <FaIcon @icon="bullhorn" class="icon--margin"/>
     Il est important de vérifier que les élèves soient <strong>certifiables</strong> avant de les inscrire en session de certification. Vous pouvez faire une
-    <a href="https://view.genial.ly/5fda0b5aebe82c0d17f177ea" class="link link--white link--bold link--underlined" target="_blank" rel="noopener noreferrer">
+    <a href={{this.documentationLink}} class="link link--white link--bold link--underlined" target="_blank" rel="noopener noreferrer">
       campagne de collecte de profils
       <FaIcon @icon="external-link-alt"/></a>
     pour vous en assurer.
