Refactor target-profile's badges tab

--- a/admin/app/components/target-profiles/badges.hbs
+++ b/admin/app/components/target-profiles/badges.hbs
@@ -1,8 +1,9 @@
-<section class="page-section mb_10">
-  <header class="page-section__header">
-    <h2 class="page-section__title">Clés de lecture</h2>
-  </header>
+<section class="page-section mb_10 badges">
 
-  <TargetProfiles::BadgeList
-    @model={{@model}} />
+  <section class="badges__section">
+    <h2 class="badges-section__title">Clés de lecture</h2>
+    <TargetProfiles::BadgeList
+      @model={{@model}} />
+  </section>
+
 </section>
