Rename 'clé de lecture' into 'résultat thématique'
The 'Clé de lecture' tab will display data about résultat thématiques and stages.
So we need to explicit the displayed data.

--- a/admin/app/components/target-profiles/badge-list.hbs
+++ b/admin/app/components/target-profiles/badge-list.hbs
@@ -25,6 +25,6 @@
       </table>
     </div>
   {{else}}
-    <div class="table__empty content-text">Aucune clé de lecture associée</div>
+    <div class="table__empty content-text">Aucun résultat thématique associé</div>
   {{/if}}
 </div>
