--- a/admin/app/components/target-profiles/badges.hbs
+++ b/admin/app/components/target-profiles/badges.hbs
@@ -1,7 +1,7 @@
 <section class="page-section mb_10 badges">
 
   <section class="badges__section">
-    <h2 class="badges-section__title">Clés de lecture</h2>
+    <h2 class="badges-section__title">Résultats thématiques</h2>
     <TargetProfiles::BadgeList
       @model={{@model}} />
   </section>
