--- a/mon-pix/app/styles/components/_footer.scss
+++ b/mon-pix/app/styles/components/_footer.scss
@@ -24,15 +24,12 @@
     border-top: 1px solid $grey-20;
     padding-top: 16px;
 
-    @include device-is('tablet') {
+    @include device-is('desktop') {
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-
-      @include device-is('desktop') {
-        padding-top: 0;
-        border: none;
-      }
+      padding-top: 0;
+      border: none;
     }
   }
 
@@ -51,10 +48,13 @@
 
   &__navigation {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
 
     @include device-is('desktop') {
       padding: 0 15px;
+      flex-direction: row;
+      align-items: center;
     }
   }
 
@@ -66,7 +66,7 @@
     font-family: $font-roboto;
     padding-top: 16px;
 
-    @include device-is('tablet') {
+    @include device-is('desktop') {
       padding-top: 0;
     }
   }
@@ -114,11 +114,16 @@
 .footer-navigation {
 
   &__item {
-    margin: 0 10px 0 0;
+    margin: 3px 0;
     color: $grey-60;
-    font-size: 0.875rem;
+    font-size: 0.8125rem;
     font-family: $font-roboto;
     letter-spacing: 0.009rem;
+    line-height: 1.375rem;
+
+    @include device-is('desktop') {
+      margin: 0 12px;
+    }
 
     &.active {
       text-decoration: none;
