--- a/mon-pix/app/templates/components/footer.hbs
+++ b/mon-pix/app/templates/components/footer.hbs
@@ -1,4 +1,3 @@
-{{!-- template-lint-disable no-implicit-this  --}}
 <footer class="footer">
   <div class="footer__container">
     <div class="footer-container__logos">
@@ -6,7 +5,7 @@
 
       {{#if this.shouldShowTheMarianneLogo}}
         <div class="footer-logos__french-government">
-          <img src="{{rootURL}}/images/logo-de-la-republique-francaise.svg"
+          <img src="{{this.rootURL}}/images/logo-de-la-republique-francaise.svg"
                alt="{{t 'common.french-republic'}}">
         </div>
       {{/if}}
