feat: handle org/fr links

--- a/mon-pix/app/templates/components/footer.hbs
+++ b/mon-pix/app/templates/components/footer.hbs
@@ -25,16 +25,16 @@
           {{t 'navigation.footer.a11y'}}
         </a>
 
-        <a href="{{t 'navigation.footer.link-eula'}}"
+        <a href="{{this.cguUrl}}"
            target="_blank"
            class="footer-navigation__item">
           {{t 'navigation.footer.eula'}}
         </a>
 
-        <a href="{{t 'navigation.footer.link-protection-policy'}}"
+        <a href="{{this.dataProtectionPolicyUrl}}"
            target="_blank"
            class="footer-navigation__item">
-          {{t 'navigation.footer.protection-policy'}}
+          {{t 'navigation.footer.data-protection-policy'}}
         </a>
       </div>
 
