[ORGA] add missing translations for editing campaign page

--- a/orga/app/components/routes/authenticated/campaign/update.hbs
+++ b/orga/app/components/routes/authenticated/campaign/update.hbs
@@ -4,7 +4,7 @@
 
   <form {{on 'submit' @update}} class="campaign-creation-form">
     <div class="form__field">
-      <label for="campaign-name" class="label">Nom de la campagne</label>
+      <label for="campaign-name" class="label">{{ t 'pages.campaign-modification.campaign-name' }}</label>
       <Input
         @id="campaign-name"
         @name="campaign-name"
@@ -17,7 +17,7 @@
 
     {{#if @campaign.isTypeAssessment}}
       <div class="form__field">
-        <label for="campaign-title" class="label">Titre du parcours</label>
+        <label for="campaign-title" class="label">{{ t 'pages.campaign-modification.personalised-test-title' }}</label>
         <Input
           @id="campaign-title"
           @name="campaign-title"
@@ -30,7 +30,7 @@
     {{/if}}
 
     <div class="form__field">
-      <label for="campaign-custom-landing-page-text" class="label">Texte de la page d'accueil</label>
+      <label for="campaign-custom-landing-page-text" class="label">{{ t 'pages.campaign-modification.landing-page-text' }}</label>
       <Textarea @id="campaign-custom-landing-page-text" @name="campaign-custom-landing-page-text" @maxlength="350" @rows={{8}} @value={{@campaign.customLandingPageText}} class="textarea" />
     </div>
 
