--- a/mon-pix/app/templates/components/challenge-item-qcm.hbs
+++ b/mon-pix/app/templates/components/challenge-item-qcm.hbs
@@ -34,7 +34,7 @@
         {{#if this.displayTimer}}
           <div class="timeout-gauge-wrapper">
             <TimeoutGauge @allottedTime={{@challenge.timer}}
-                          @updateChallengeTimedOut={{this.updateChallengeTimedOut}} />
+                          @setChallengeAsTimedOut={{this.setChallengeAsTimedOut}} />
           </div>
         {{/if}}
       </div>
