--- a/mon-pix/app/styles/components/_pix-logo.scss
+++ b/mon-pix/app/styles/components/_pix-logo.scss
@@ -14,10 +14,10 @@
   }
 
   &__image {
-    height: 45px;
+    width: 60px;
 
     @include device-is('desktop') {
-      height: 54px;
+      width: 71px;
     }
   }
 }
