--- a/orga/app/components/routes/authenticated/campaign/profile/details.hbs
+++ b/orga/app/components/routes/authenticated/campaign/profile/details.hbs
@@ -3,8 +3,8 @@
    <PreviousPageButton
      @route="authenticated.campaigns.campaign.profiles"
      @routeId={{@campaign.id}}
-     @backButtonAriaLabel="Retour"
-     aria-label="Nom de la campagne"
+     @backButtonAriaLabel={{t "common.actions.back"}}
+     aria-label={{t "pages.campaign-individual-results.campaign-name"}}
    >
     {{@campaign.name}}
    </PreviousPageButton>
@@ -16,7 +16,9 @@
         {{@campaignProfile.firstName}} {{@campaignProfile.lastName}}
       </h2>
       {{#if (and @campaignProfile.isCertifiable @campaignProfile.isShared)}}
-        <PixTag @color="green-light" class="profile-user__certifiable">Certifiable</PixTag>
+        <PixTag @color="green-light" class="profile-user__certifiable">
+          {{t "pages.profiles-individual-results.certifiable"}}
+        </PixTag>
       {{/if}}
     </header>
 
@@ -29,12 +31,16 @@
           </li>
         {{/if}}
         <li class="panel-header-data__content">
-          <div class="label-text panel-header-data-content__label">Commencé le</div>
+          <div class="label-text panel-header-data-content__label">
+            {{t "pages.campaign-individual-results.start-date"}}
+          </div>
           <div class="value-text panel-header-data-content__value">{{moment-format @campaignProfile.createdAt 'DD MMM YYYY'}}</div>
         </li>
         {{#if @campaignProfile.isShared}}
           <li class="panel-header-data__content">
-            <div class="label-text panel-header-data-content__label">Envoyé le</div>
+            <div class="label-text panel-header-data-content__label">
+              {{t "pages.campaign-individual-results.shared-date"}}
+            </div>
               <div class="value-text panel-header-data-content__value">{{moment-format @campaignProfile.sharedAt 'DD MMM YYYY'}}</div>
           </li>
         {{/if}}
@@ -43,15 +49,19 @@
       {{#if @campaignProfile.isShared}}
         <ul class="panel-header__data panel-header__data--highlight">
           <li class="panel-header-data__content">
-            <span class="value-text value-text--highlight">{{@campaignProfile.pixScore}}</span>
-            <span class="label-text label-text--dark label-text--small">PIX</span>
+            <span class="value-text value-text--highlight">{{t "pages.profiles-individual-results.pix-score" score=@campaignProfile.pixScore}}</span>
+            <span class="label-text label-text--dark label-text--small">
+              {{t "pages.profiles-individual-results.pix"}}
+            </span>
           </li>
           <li class="panel-header-data__content">
             <span class="value-text">
               <span class="value-text value-text--highlight">{{@campaignProfile.certifiableCompetencesCount}}</span>
               <span>&nbsp;/&nbsp;{{@campaignProfile.competencesCount}}</span>
             </span>
-            <span class="label-text label-text--dark label-text--small">COMP. CERTIFIABLES</span>
+            <span class="label-text label-text--dark label-text--small">
+              {{t "pages.profiles-individual-results.competences-certifiables"}}
+            </span>
           </li>
         </ul>
       {{/if}}
