[ORGA] Display orga divisions

--- a/orga/app/templates/authenticated/certifications.hbs
+++ b/orga/app/templates/authenticated/certifications.hbs
@@ -6,5 +6,9 @@
     <div class="certifications-page__text">
       {{t 'pages.certifications.description'}}
     </div>
+    <div>
+      <PixSelect id="subcategory-for-category-candidate-information-change" @options={{@model.options}}
+        @selectedOption={{this.selectedDivision}} @onChange={{this.onSelectDivision}} />
+    </div>
   </div>
 </div>
