--- a/orga/app/styles/pages/authenticated/certifications.scss
+++ b/orga/app/styles/pages/authenticated/certifications.scss
@@ -22,14 +22,47 @@
 
   &__text {
     font-family: $roboto;
-    margin: 2px 0 29px 16px;
-    font-size: 0.875rem;
+    margin: 2px 0 32px 16px;
+    font-size: 16px;
     line-height: 1.375rem;
+    p {
+      margin: 0;
+    }
+  }
+
+  &__action {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    width: 100%;
+    margin-left: 1rem;
+
+    button {
+      height: 36px;
+      line-height: 36px;
+    }
+
+    .certifications-page-action {
+
+      &__select-container {
+
+        label[for^="certifications-page-action__select"] {
+          font-size: 14px;
+          color: $grey-90;
+          margin-left: 2px;
+        }
+
+        .pix-select {
+          margin: 4px 24px 0 0;
+          width: 153px;
+          height: 36px;
+        }
+      }
+    }
   }
 }
 
 .certifications-page-header {
-
   &__add-member-button {
     margin-top: 20px;
     margin-left: auto;
