[FEATURE][API] Add translations on profile collection csv header (PIX-2205)

--- a/orga/app/components/routes/authenticated/campaign/report.hbs
+++ b/orga/app/components/routes/authenticated/campaign/report.hbs
@@ -74,7 +74,7 @@
     </nav>
 
     <div class="campaign-details-controls__export-button">
-      <a class="button button--link" href="{{@campaign.urlToResult}}" target="_blank" rel="noopener noreferrer" download>
+      <a class="button button--link" href="{{this.downloadUrl}}" target="_blank" rel="noopener noreferrer" download>
         {{t 'pages.campaign.actions.export-results'}}
       </a>
     </div>
