--- a/orga/app/templates/authenticated/sco-students/list.hbs
+++ b/orga/app/templates/authenticated/sco-students/list.hbs
@@ -3,7 +3,7 @@
     @students={{@model}}
     @isLoading={{this.isLoading}}
     @importStudents={{this.importStudents}}
-    @connexionTypesOptions={{this.connexionTypesOptions}}
+    @connectionTypesOptions={{this.connectionTypesOptions}}
     @triggerFiltering={{this.triggerFiltering}}
     @lastNameFilter={{this.lastName}}
     @firstNameFilter={{this.firstName}}
