--- a/orga/app/components/routes/authenticated/campaign/new.hbs
+++ b/orga/app/components/routes/authenticated/campaign/new.hbs
@@ -11,11 +11,11 @@
       @value={{@campaign.name}}
     />
 
-    {{#each @campaign.errors.name as |error|}}
+    {{#if @campaign.errors.name }}
       <div class='form__error error-message'>
-        {{error.message}}
+        {{display-campaign-errors @campaign.errors.name}}
       </div>
-    {{/each}}
+    {{/if}}
   </div>
 
   {{#if this.currentUser.organization.canCollectProfiles}}
@@ -31,11 +31,11 @@
         <label for="collect-participants-profile">{{t 'pages.campaign-creation.purpose.profiles-collection'}}</label>
       </div>
 
-      {{#each @campaign.errors.type as |error|}}
+      {{#if @campaign.errors.type }}
         <div class='form__error error-message'>
-          {{error.message}}
+          {{display-campaign-errors @campaign.errors.type}}
         </div>
-      {{/each}}
+      {{/if}}
 
     </div>
   {{/if}}
@@ -49,11 +49,11 @@
         @options={{this.targetProfilesOptions}}
         @emptyOptionLabel=""
       />
-      {{#each @campaign.errors.targetProfile as |error|}}
+      {{#if @campaign.errors.targetProfile}}
         <div class='form__error error-message'>
-          {{error.message}}
+          {{display-campaign-errors @campaign.errors.targetProfile}}
         </div>
-      {{/each}}
+      {{/if}}
       {{#if this.currentUser.isSCOManagingStudents}}
         <p class="form__comment">
           {{t 'pages.campaign-creation.target-profile-informations' htmlSafe=true}}
@@ -86,11 +86,11 @@
         @aria-required="true"
         @value={{@campaign.idPixLabel}}
       />
-      {{#each @campaign.errors.idPixLabel as |error|}}
+      {{#if @campaign.errors.idPixLabel }}
         <div class='form__error error-message'>
-          {{error.message}}
+          {{display-campaign-errors @campaign.errors.idPixLabel}}
         </div>
-      {{/each}}
+      {{/if}}
       <div class="form__information help-text">
         {{t 'pages.campaign-creation.external-id-label.suggestion'}}
       </div>
