Display stages on target-profile page

--- a/admin/app/styles/app.scss
+++ b/admin/app/styles/app.scss
@@ -49,3 +49,4 @@
 @import 'components/target-profiles/badges';
 @import 'components/target-profiles/details';
 @import 'components/target-profiles/create-target-profile-form';
+@import 'components/target-profiles/stage-list';
