--- a/admin/app/components/target-profiles/badges.hbs
+++ b/admin/app/components/target-profiles/badges.hbs
@@ -3,7 +3,12 @@
   <section class="badges__section">
     <h2 class="badges-section__title">Résultats thématiques</h2>
     <TargetProfiles::BadgeList
-      @model={{@model}} />
+      @model={{@model.badges}} />
+  </section>
+
+  <section class="badges__section">
+    <h2 class="badges-section__title">Paliers</h2>
+    <TargetProfiles::StageList @model={{@model.stage}}/>
   </section>
 
 </section>
