--- a/mon-pix/app/templates/components/password-reset-demand-form.hbs
+++ b/mon-pix/app/templates/components/password-reset-demand-form.hbs
@@ -40,8 +40,11 @@
     <form {{on 'submit' this.savePasswordResetDemand}} class="sign-form__body">
 
       <div class="sign-form-body__input">
-        <FormTextfield @label="{{t 'pages.password-reset-demand.fields.email.label'}}" @textfieldName="email" @validationStatus="default"
-                       @inputBindingValue={{this.email}} @require="true" />
+        <FormTextfield @label="{{t 'pages.password-reset-demand.fields.email.label'}}"
+                       @textfieldName="email"
+                       @validationStatus="default"
+                       @inputBindingValue={{this.email}}
+                       @require={{true}} />
       </div>
 
       <div class="sign-form-body__bottom-button sign-form-body__bottom-button--big">
