--- a/mon-pix/app/templates/components/update-expired-password-form.hbs
+++ b/mon-pix/app/templates/components/update-expired-password-form.hbs
@@ -31,7 +31,7 @@
                          @onValidate={{this.validatePassword}}
                          @validationStatus={{this.validation.status}}
                          @validationMessage={{this.validationMessage}}
-                         @required={{true}} />
+                         @require={{true}} />
         </div>
 
         <div class="update-expired-password-form-body__bottom-button update-expired-password-form-body__bottom-button--big">
