--- a/mon-pix/app/templates/components/competence-card-mobile.hbs
+++ b/mon-pix/app/templates/components/competence-card-mobile.hbs
@@ -1,21 +1,20 @@
-{{!-- template-lint-disable no-implicit-this no-curly-component-invocation --}}
 <article class="competence-card {{if @interactive "competence-card--interactive"}}">
-  <LinkTo @route="competences.details" @model={{scorecard.competenceId}} class="competence-card__link">
-    <span class="competence-card__wrapper competence-card__wrapper--{{scorecard.area.color}}"></span>
+  <LinkTo @route="competences.details" @model={{@scorecard.competenceId}} class="competence-card__link">
+    <span class="competence-card__wrapper competence-card__wrapper--{{@scorecard.area.color}}"></span>
     <div class="competence-card__title">
-      <span class="competence-card__area-name">{{scorecard.area.title}}</span>
-      <span class="competence-card__competence-name">{{scorecard.name}}</span>
+      <span class="competence-card__area-name">{{@scorecard.area.title}}</span>
+      <span class="competence-card__competence-name">{{@scorecard.name}}</span>
     </div>
     <div class="competence-card__body">
-      {{#if scorecard.isFinishedWithMaxLevel}}
+      {{#if @scorecard.isFinishedWithMaxLevel}}
         <div class="competence-card__congrats competence-card__congrats--small">
-          <span class="score-value competence-card__score-value competence-card__score-value--congrats">{{displayedLevel}}</span>
+          <span class="score-value competence-card__score-value competence-card__score-value--congrats">{{this.displayedLevel}}</span>
         </div>
       {{else}}
         <div class="competence-card__body--white-background">
-          <CircleChart @value={{scorecard.percentageAheadOfNextLevel}} @sliceColor={{scorecard.area.color}} @chartClass="circle-chart__content--small" @thicknessClass="circle--thick">
+          <CircleChart @value={{@scorecard.percentageAheadOfNextLevel}} @sliceColor={{@scorecard.area.color}} @chartClass="circle-chart__content--small" @thicknessClass="circle--thick">
             <div class="competence-card__level">
-              <span class="score-value competence-card__score-value">{{replace-zero-by-dash displayedLevel}}</span>
+              <span class="score-value competence-card__score-value">{{replace-zero-by-dash this.displayedLevel}}</span>
             </div>
           </CircleChart>
         </div>
