--- a/mon-pix/app/templates/components/circle-chart.hbs
+++ b/mon-pix/app/templates/components/circle-chart.hbs
@@ -1,4 +1,4 @@
-<div class="circle-chart">
+<div class="circle-chart" ...attributes>
   <svg viewBox="1.2 1.2 33.6 33.6" class={{concat "circle-chart__content " @chartClass}}>
     <path class={{concat "circle " @thicknessClass}}
           d="M18 2 a 16 16 0 0 1 0 32 a 16 16 0 0 1 0 -32">
