Extract hbs if condition into js function call

--- a/admin/app/components/target-profiles/stage-list.hbs
+++ b/admin/app/components/target-profiles/stage-list.hbs
@@ -1,5 +1,5 @@
 <div class="content-text content-text--small">
-  {{#if (gt @model.list.length 0)}}
+  {{#if this.hasStages}}
     <div class="table-admin stages-table">
       <table>
         <thead>
