--- a/admin/app/components/target-profiles/stage-list.hbs
+++ b/admin/app/components/target-profiles/stage-list.hbs
@@ -12,10 +12,10 @@
         </tr>
         </thead>
         <tbody>
-        {{#each @model.list as |stage|}}
+        {{#each @stages as |stage|}}
           <tr>
             <td>{{stage.id}}</td>
-            <td class="stages-table__image"><img src={{@model.imageUrl}} alt="" /></td>
+            <td class="stages-table__image"><img src={{@targetProfileImageUrl}} alt="" /></td>
             <td>{{stage.threshold}}</td>
             <td>{{stage.title}}</td>
             <td>{{stage.message}}</td>
